Changed to semantic-ui grid

--- a/index.html
+++ b/index.html
@@ -3,8 +3,50 @@
 <head lang="en">
   <meta charset="UTF-8">
   <title>LW INTERACTIVE</title>
+  <link rel="stylesheet" href="css/styles.css"/>
 </head>
 <body>
+<div class="page-wrap">
+  <div class="ui stackable celled grid">
+    <div class="row">
+      <div class="eight wide column">
+        eight
+      </div>
+      <div class="eight wide column">
+        eight
+      </div>
+    </div>
+    <div class="row">
+      <div class="four wide column">four
+      </div>
+      <div class="four wide column">four
+      </div>
+      <div class="four wide column">four
+      </div>
+      <div class="four wide column">four
+      </div>
+    </div>
+    <div class="row">
+      <div class="six wide column">six
+      </div>
+      <div class="six wide column">six
+      </div>
+      <div class="four wide column">four
+      </div>
+      <div class="four wide column">four
+      </div>
+    </div>
+  </div>
+  <div class="ui equal relaxed grid">
+    <div class="row">
+      <div class="four wide column">col-e</div>
+      <div class="four wide column">col-e</div>
+      <div class="four wide column">col-e</div>
+      <div class="four wide column">col-e</div>
+    </div>
+  </div>
+</div>
+<!-- /page-wrap -->
 
 </body>
 </html>
