Changed layout to 2-panel

--- a/index.html
+++ b/index.html
@@ -7,42 +7,14 @@
 </head>
 <body>
 <div class="page-wrap">
-  <div class="ui stackable celled grid">
-    <div class="row">
-      <div class="eight wide column">
-        eight
+  <div class="ui equal width center aligned padded grid">
+    <div class="row half">
+      <div class="black column left-panel">
+        <img src="img/lw-interactive-logo.png" alt=""/>
       </div>
-      <div class="eight wide column">
-        eight
+      <div class="black column right-panel">
+       white
       </div>
-    </div>
-    <div class="row">
-      <div class="four wide column">four
-      </div>
-      <div class="four wide column">four
-      </div>
-      <div class="four wide column">four
-      </div>
-      <div class="four wide column">four
-      </div>
-    </div>
-    <div class="row">
-      <div class="six wide column">six
-      </div>
-      <div class="six wide column">six
-      </div>
-      <div class="four wide column">four
-      </div>
-      <div class="four wide column">four
-      </div>
-    </div>
-  </div>
-  <div class="ui equal relaxed grid">
-    <div class="row">
-      <div class="four wide column">col-e</div>
-      <div class="four wide column">col-e</div>
-      <div class="four wide column">col-e</div>
-      <div class="four wide column">col-e</div>
     </div>
   </div>
 </div>
