Changed layout to 2-panel v.1

--- a/index.html
+++ b/index.html
@@ -9,11 +9,11 @@
 <div class="page-wrap">
   <div class="ui equal width center aligned padded grid">
     <div class="row half">
-      <div class="black column left-panel">
+      <div class="column panel panel-left">
         <img src="img/lw-interactive-logo.png" alt=""/>
       </div>
-      <div class="black column right-panel">
-       white
+      <div class="column panel panel-right">
+       <p>white</p>
       </div>
     </div>
   </div>
