--- a/index.html
+++ b/index.html
@@ -5,18 +5,37 @@
   <title>LW INTERACTIVE</title>
   <link rel="stylesheet" href="css/styles.css"/>
 </head>
-<body>
+<body class="home">
 <div class="page-wrap">
-  <div class="ui equal width center aligned padded grid">
-    <div class="row half">
-      <div class="column panel panel-left">
-        <img src="img/lw-interactive-logo.png" alt=""/>
-      </div>
-      <div class="column panel panel-right">
-       <p>white</p>
+  <header>
+    <div class="units-row">
+      <div class="unit-centered unit-80">
+        <div class="unit-50">
+          <img src="img/lw-interactive.png" alt=""/>
+        </div>
+        <div class="unit-50">
+          <nav class="navbar navbar-right">
+            <ul>
+              <li><a href="">Projects</a></li>
+              <li><a href="">About</a></li>
+              <li><a href="">Resources</a></li>
+            </ul>
+          </nav>
+        </div>
       </div>
     </div>
-  </div>
+    <div class="units-row">
+      <div class="unit-centered unit-80">
+        <div class="unit-60">
+          <h1>LW-Interactive</h1>
+          <p>I deliver outstanding interactive with highest possible standards. I focus on clean design along with clean modular code to deliver an exceptional web experience for all users.</p>
+        </div>
+      </div>
+    </div>
+  </header>
+  <main>
+
+  </main>
 </div>
 <!-- /page-wrap -->
 
