Changed layout to 2-panel v.3

--- a/index.html
+++ b/index.html
@@ -33,8 +33,28 @@
       </div>
     </div>
   </header>
-  <main>
+  <div class="units-container toggle">
+    <div class="unit-100">
 
+    </div>
+  </div>
+  <main>
+    <div class="units-row units-split projects">
+    <div class="unit-50">
+      <img src="img/projects/n2n-cdc.jpg" alt=""/>
+    </div>
+    <div class="unit-50">
+      <img src="img/projects/gifted-scholars.jpg" alt=""/>
+    </div>
+  </div>
+    <div class="units-row units-split projects">
+      <div class="unit-50">
+        <img src="img/projects/n2n-cdc.jpg" alt=""/>
+      </div>
+      <div class="unit-50">
+        <img src="img/projects/gifted-scholars.jpg" alt=""/>
+      </div>
+    </div>
   </main>
 </div>
 <!-- /page-wrap -->
