Modified window height

--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
   <link rel="stylesheet" href="css/styles.css"/>
 </head>
 <body class="home">
-<div class="page-wrap">
-  <header>
+<div class="page-wrap" role="banner">
+  <header class="header-main">
     <div class="units-row">
       <div class="unit-centered unit-80">
         <div class="unit-50">
