100 height to header-main

--- a/index.html
+++ b/index.html
@@ -1,61 +1,60 @@
 <!DOCTYPE html>
 <html>
 <head lang="en">
-  <meta charset="UTF-8">
-  <title>LW INTERACTIVE</title>
-  <link rel="stylesheet" href="css/styles.css"/>
+    <meta charset="UTF-8">
+    <title>LW INTERACTIVE</title>
+    <link rel="stylesheet" href="css/styles.css"/>
 </head>
 <body class="home">
 <div class="page-wrap" role="banner">
-  <header class="header-main">
-    <div class="units-row">
-      <div class="unit-centered unit-80">
-        <div class="unit-50">
-          <img src="img/lw-interactive.png" alt=""/>
+    <header class="header-main">
+        <div class="units-row header-nav">
+            <div class="unit-centered unit-80">
+                <div class="unit-50">
+                    <a href=""><img src="img/lw-interactive.png" alt=""/></a>
+                </div>
+                <div class="unit-50">
+                    <nav class="navbar navbar-right">
+                        <ul>
+                            <li><a href="">Projects</a></li>
+                            <li><a href="">About</a></li>
+                            <li><a href="">Resources</a></li>
+                        </ul>
+                    </nav>
+                </div>
+            </div>
         </div>
-        <div class="unit-50">
-          <nav class="navbar navbar-right">
-            <ul>
-              <li><a href="">Projects</a></li>
-              <li><a href="">About</a></li>
-              <li><a href="">Resources</a></li>
-            </ul>
-          </nav>
+        <div class="units-row header-call">
+            <div class="unit-centered unit-80">
+                <div class="unit-60">
+                    <!--<h1>LW-Interactive</h1>-->
+                    <p>I deliver outstanding interactive experiences with highest possible standards. I focus on clean
+                        design along with clean modular code to deliver an exceptional web experience for all users.</p>
+                </div>
+            </div>
         </div>
-      </div>
-    </div>
-    <div class="units-row">
-      <div class="unit-centered unit-80">
-        <div class="unit-60">
-          <h1>LW-Interactive</h1>
-          <p>I deliver outstanding interactive with highest possible standards. I focus on clean design along with clean modular code to deliver an exceptional web experience for all users.</p>
-        </div>
-      </div>
-    </div>
-  </header>
-  <div class="units-container toggle">
-    <div class="unit-100">
+    </header>
+    <div class="units-container toggle">
+        <div class="unit-100">
 
+        </div>
     </div>
-  </div>
-  <main>
-    <div class="units-row units-split projects">
-    <div class="unit-50">
-      <img src="img/projects/n2n-cdc.jpg" alt=""/>
-    </div>
-    <div class="unit-50">
-      <img src="img/projects/gifted-scholars.jpg" alt=""/>
-    </div>
-  </div>
-    <div class="units-row units-split projects">
-      <div class="unit-50">
-        <img src="img/projects/n2n-cdc.jpg" alt=""/>
-      </div>
-      <div class="unit-50">
-        <img src="img/projects/gifted-scholars.jpg" alt=""/>
-      </div>
-    </div>
-  </main>
+    <main>
+        <div class="units-row units-split projects">
+            <div class="unit-25">
+                <img src="img/projects/n2n-cdc.jpg" alt=""/>
+            </div>
+            <div class="unit-25">
+                <img src="img/projects/gifted-scholars.jpg" alt=""/>
+            </div>
+            <div class="unit-25">
+                <img src="img/projects/n2n-cdc.jpg" alt=""/>
+            </div>
+            <div class="unit-25">
+                <img src="img/projects/gifted-scholars.jpg" alt=""/>
+            </div>
+        </div>
+    </main>
 </div>
 <!-- /page-wrap -->
 
